assets/css/main.css
/* ------------ MAIN ELEMENTS STYLING (CONCURENT ACROSS ALL PAGES) ------------ */

body {
  /* default text settings per recommended-homework-assignment.md */
  font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
  color: #777777;
  background: url("../images/background.png");
}

.navbar-default .navbar-brand {
  /* Change the background color of the logo */
  color: white;
  background: #4aaaa5;
  font-weight: bolder;
  font-size: 1.5em;
}

.navbar-default .navbar-brand:hover {
  /* Keep the logo consistatnt when mousover */
  color: white;
  background: #4aaaa5;
  font-weight: bolder;
  font-size: 1.5em;
  cursor: default;
}

.panel-heading h1 {
  /* default heading font settings per recommended-homework-assignment.md */
  font-family: "Georgia", "Times", "Times New Roman", "serif";
  color: #4aaaa5;
  font-weight: bolder;
  font-size: 2em;
}

/* ---------------------------- CONNECT WITH ME SIDEBAR ---------------------------- */

.panel-title {
  /* default heading font settings per recommended-homework-assignment.md */
  font-family: "Georgia", "Times", "Times New Roman", "serif";
  color: #4aaaa5;
  font-weight: bold;
  font-size: 1.25em;
}

.social .img-responsive {
  /* Sets the width of the connect with me social logos while keeping them responsive */
  max-width: 30%;
  max-width: auto;
}

.contact img {
  /* Keeps the image links clean when mousing over */
  border: 2px solid #ffffff;
}

.contact img:hover {
  /* Puts a colored border around the social logos when you mouseover */
  border: 2px solid #4aaaa5;
}

.contact a:hover {
  /* Removes the annoying line connecting the icons when you mouseover */
  text-decoration: none;
}

/* ---------------------------- FOOTER ---------------------------- */

#footerCSS {
  /* Custom styling to keep footer element in line with theme */
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  background-color: #666666;
  border-top: 10px solid #4aaaa5;
}

#footerCSS a {
  /* Keeps footer consistant when mousing over the link */
  text-align: center;
  color: #acacac;
  text-decoration: none;
}

/* ---------------------------- INDEX.HTML STYLING ---------------------------- */

#profilePic {
  /* Sets margins for photo so text wraps neatly */
  margin-right: 20px;
  margin-bottom: 10px;
}

.aboutMe .img-responsive {
  /* Keeps the photo desired size while maintaining it's responsiveness */
  max-width: 50%;
  max-width: auto;
}

/* ---------------------------- PORTFOLIO.HTML STYLING ---------------------------- */

/* PLEASE REVISIT THIS! WHEN CSS IS NOT ABSOLUTE (BANNER AT BASE OF PIC) IT'S CORRECT WIDTH, WHEN ABOLUTE IT GETS WIDER ON THE RIGHT */
.caption {
  /* Sets the banner text over the portfolio images */
  clear: both;
  bottom: 10%;
  position: absolute;
  background: #4aaaa5;
  font-size: 2em;
  width: 99%;
  font-weight: bolder;
}

.bannerColor {
  /* Keeping text over photo color in like with current theme */
  color: white;
  font-weight: bolder;
}

.thumbnail {
  /* allows text to be placed on top of this element */
  position: relative;
}

.container .portfolio {
  /* Adds a white background to the element */
  background: white;
}

/* ---------------------------- CONTACT.HTML STYLING ---------------------------- */

/* Prevents the user from making the text area wider for better UX */
textarea {
  resize: vertical;
}

/* Styling for the form area */
.form-area {
  background-color: #fafafa;
  padding: 10px 40px 60px;
  margin: 10px 0px 60px;
  border: 1px solid GREY;
}

.form-area h1 {
  /* default heading font settings per recommended-homework-assignment.md */
  font-family: "Georgia", "Times", "Times New Roman", "serif";
  color: #4aaaa5;
  font-weight: bolder;
  font-size: 2em;
}

